--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </section>
 
 
-    <!--  BARRE NAV DU BAS - FOOTER -->
+    <!--  BARRE NAV DU BAS - FOOTER!!! -->
 
     <footer>
         <h2 class="titre"><span>BE</span>movie</h2>
