--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="swiper-wrapper"></div>
         
         <div class="swiper-pagination"></div>
-        <div class="custom-button-next">&gt;</div>
+        <button class="custom-button-next">&gt;</button>
         <div class="custom-button-prev">&lt;</div>
     </section>
 
