--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
     <section class="swiper catalog1">
         <h3 class="results">Results for:</h3>
         <div class="swiper-wrapper"></div>
-        
-        <div class="swiper-pagination"></div>
-        <button class="custom-button-next">&gt;</button>
-        <div class="custom-button-prev">&lt;</div>
+        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></div>
+        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></div>
     </section>
 
     <!--  SECONDE SECTION DE FILM -->
@@ -106,9 +104,8 @@
             <div class="swiper-slide"><img src="bemov/Capture d'écran 2024-09-03 122524.png" alt="tokyo"></div>
             <div class="swiper-slide"><img src="bemov/Capture d'écran 2024-09-03 122524.png" alt="toktok"></div>
         </div>
-        <div class="swiper-pagination"></div>
-        <div class="custom-button-next">&gt;</div>
-        <div class="custom-button-prev">&lt;</div>
+        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></div>
+        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></div>
     </section>
 
 
@@ -133,10 +130,8 @@
     <section class="swiper catalog3">
         <h3 class = "legenre">Type</h3>
         <div class="swiper-wrapper"></div>
-        <div class="swiper-pagination"></div>
-        <div class="custom-button-next">
-            <button><img src="" alt=""></button>&gt;</div>
-        <div class="custom-button-prev">&lt;</div>
+        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></button></div>
+        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></button></div>
     </section>
 
 
