--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
 
 
-    <div class="modal"> 
+    <div class="modal">
+        <p class="close-btn1">X</p>
         <div class="MC">
-            <p class="close-btn1">X</p><!-- Bouton de fermeture en haut à gauche -->
+            <!-- Bouton de fermeture en haut à gauche -->
             <img src="" alt="" class="mimage"> <!-- Image du film -->
             <div class="texte-content">
                 <h3 class="Film"></h3> <!-- Titre du film -->
