--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="MC">
             <!-- Bouton de fermeture en haut à gauche -->
             <img src="" alt="" class="mimage"> <!-- Image du film -->
-            <div class="texte-content">
+            <div class="texteContent">
                 <h3 class="Film"></h3> <!-- Titre du film -->
                 <p class="rate"></p> <!-- Note du film -->
                 <p class="date"></p> <!-- datedu film -->
@@ -60,7 +60,7 @@
     </div>
 
 
-    <!-- Barre de nav en haut  -->
+    <!-- Barre de nav en haut  !!-->
 
 
     <header class="navbar">
@@ -93,8 +93,8 @@
     <section class="swiper catalog1">
         <h3 class="results">Results for:</h3>
         <div class="swiper-wrapper"></div>
-        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></div>
-        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></div>
+        <div class="custom-button-next"><img src="bemov/Vector.png" alt=""></div>
+        <div class="custom-button-prev"><img src="bemov/Vector (1).png" alt=""></div>
     </section>
 
     <!--  SECONDE SECTION DE FILM -->
@@ -105,8 +105,8 @@
             <div class="swiper-slide"><img src="bemov/Capture d'écran 2024-09-03 122524.png" alt="tokyo"></div>
             <div class="swiper-slide"><img src="bemov/Capture d'écran 2024-09-03 122524.png" alt="toktok"></div>
         </div>
-        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></div>
-        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></div>
+        <div class="custom-button-next"><img src="bemov/Vector.png" alt=""></div>
+        <div class="custom-button-prev"><img src="bemov/Vector (1).png" alt=""></div>
     </section>
 
 
@@ -131,8 +131,8 @@
     <section class="swiper catalog3">
         <h3 class = "legenre">Type</h3>
         <div class="swiper-wrapper"></div>
-        <div class="custom-button-next"><button><img src="bemov/Vector.png" alt=""></button></div>
-        <div class="custom-button-prev"><button><img src="bemov/Vector (1).png" alt=""></button></div>
+        <div class="custom-button-next"><img src="bemov/Vector.png" alt=""></div>
+        <div class="custom-button-prev"><img src="bemov/Vector (1).png" alt=""></div>
     </section>
 
 
